--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.6.7",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2"
