--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.6.7",
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
