--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "myprojectapi07",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "@material-tailwind/react": "^2.1.10",
-    "@reduxjs/toolkit": "^2.3.0",
-    "axios": "^1.6.7",
-    "date-fns": "^4.1.0",
-    "react": "^18.2.0",
-    "react-day-picker": "^9.1.4",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.22.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.1.4"
-  }
+    "name": "myprojectapi07",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.1.5",
+        "@material-tailwind/react": "^2.1.10",
+        "@reduxjs/toolkit": "^2.3.0",
+        "axios": "^1.6.7",
+        "date-fns": "^4.1.0",
+        "react": "^18.2.0",
+        "react-day-picker": "^9.1.4",
+        "react-dom": "^18.2.0",
+        "react-icons": "^5.3.0",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.22.2",
+        "redux-thunk": "^3.1.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.56",
+        "@types/react-dom": "^18.2.19",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^8.56.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.14",
+        "vite": "^5.1.4"
+    }
 }
