--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
-        "@heroicons/react": "^2.1.5",
+        "@heroicons/react": "^2.2.0",
         "@material-tailwind/react": "^2.1.10",
-        "@reduxjs/toolkit": "^2.3.0",
+        "@reduxjs/toolkit": "^2.9.0",
         "axios": "^1.6.7",
         "date-fns": "^4.1.0",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
-        "react-day-picker": "^9.1.4",
+        "react-day-picker": "^9.11.1",
         "react-dom": "^18.2.0",
         "react-icons": "^5.3.0",
-        "react-redux": "^9.1.2",
-        "react-router-dom": "^6.22.2",
-        "redux-thunk": "^3.1.0"
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^6.30.1",
+        "redux": "^5.0.1",
+        "redux-thunk": "^3.1.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/react": "^18.2.56",
