--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@heroicons/react": "^2.2.0",
         "@material-tailwind/react": "^2.1.10",
+        "@mui/icons-material": "^7.3.4",
+        "@mui/material": "^7.3.4",
         "@reduxjs/toolkit": "^2.9.0",
         "axios": "^1.6.7",
         "date-fns": "^4.1.0",
@@ -23,7 +27,6 @@
         "react-dom": "^18.2.0",
         "react-icons": "^5.3.0",
         "react-redux": "^9.2.0",
-        "react-router-dom": "^6.30.1",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
         "tailwindcss-animate": "^1.0.7"
